# hear-me

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md  ROADMAP.md  future.md  requirements.md
scripts/: .gitkeep  destroy-all.sh  dev-setup.sh  download_models.py  install-macos.sh  install.py
src/: .gitkeep
src/hearme/: __init__.py  __main__.py  analyzer.py  cleanup.py  config.py  context.py  output.py  planner.py  prerequisites.py  renderer.py  scanner.py  server.py  troubleshoot.py
src/hearme/engines/: __init__.py  base.py  dia2.py  kokoro.py  mock.py  piper.py  registry.py
tests/: .gitkeep  test_analyzer.py  test_config.py  test_dia2_format.py  test_engines.py  test_prerequisites.py  test_renderer.py  test_scanner.py
