[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hearme-mcp"
version = "0.1.0"
description = "Replace your README.md with a hearme.mp3 - MCP for documentation-to-audio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HEARME Contributors" }
]
keywords = ["mcp", "tts", "documentation", "audio", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
hearme = "hearme:main"

[project.urls]
Homepage = "https://github.com/hearme-mcp/hearme"
Documentation = "https://github.com/hearme-mcp/hearme/docs"
Repository = "https://github.com/hearme-mcp/hearme"

[tool.hatch.build.targets.wheel]
packages = ["src/hearme"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
